# FEVER-Treat-or-Refer-

./: .env.example  .gitignore  02. Treat or Refer (Antigravity - Implementation).docx  BRIEF.md  FeverGate-5min-Pitch.pptx  README.md  Week 1 - Treat or Refer.docx  Week 2.0 - Opportunity - Solution tree.docx  Week 2.0 - Opportunity tree.docx  app.py  engineering.md  package-lock.json  package.json  product.md  requirements.txt  ui.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
docs/: exemplary-weekly-epi-report.md  fevergate-feedback-form.md  opportunity-solution-tree.md  product-design-doc.md
legacy/python/: README.md  app.py  pyproject.toml  requirements.txt  weekly_report.py
legacy/python/.streamlit/: config.toml  secrets.toml.example
legacy/python/pages/: 1_Weekly_Report.py
legacy/python/src/decision_engine/: engine.py
legacy/python/src/explainer/: __init__.py  narrate.py
legacy/python/src/ui/: catchment.py  comorbidity_options.py  danger_sign_labels.py  encounter_log.py  gemini_client.py  pathways.py  patient_context.py  refer_reason.py  teleconsultation.py  weekly_report.py
legacy/python/src/ui/i18n/: __init__.py  mm.py  pathways_mm.py
legacy/python/src/ui/streamlit_app/: __init__.py  assistant.py  components.py  form.py  main.py  result.py  session.py  styles.py
legacy/python/tests/: test_catchment.py  test_encounter_log.py  test_engine.py  test_pathways.py  test_sepsis_internals.py  test_sepsis_screen.py  test_teleconsultation.py  test_vitals_wiring.py  test_weekly_report.py
public/: sw.js
reference/: README.md
(+82 files in other folders)
