[project]
name = "fevergate"
version = "0.1.0"
description = "Border clinic febrile triage — treat/refer decision support without a lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "streamlit>=1.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
